--- a/HW/a6/index.html
+++ b/HW/a6/index.html
@@ -1,1 +1,9 @@
+<!DOCTYPE html>
+<html>
+  <head>
+     <title>Assignment 5: jQuery Assignment 1 - How to Website</title>
+  </head>
+<body>
 
+</body>
+</html>
