jQuery Assignment 2 - Plugins
Assignment 6

--- a/HW/a7/index.html
+++ b/HW/a7/index.html
@@ -1,1 +1,9 @@
+<!DOCTYPE html>
+<html>
+  <head>
+     <title>Assignment 6: jQuery Assignment 2 - Plugins</title>
+  </head>
+<body>
 
+</body>
+</html>
