--- a/HW/index.html
+++ b/HW/index.html
@@ -6,13 +6,13 @@
 <body>
   <h1>Yajie Weng<h1/>
   <ol>
-      <li><a href=""><a/><li/>
-      <li>><a href=""><a/><li/>
-      <li>><a href=""><a/><li/>
-      <li>><a href=""><a/><li/>
-      <li>><a href=""><a/><li/>
-      <li>><a href=""><a/><li/>
-      <li>><a href=""><a/><li/>
+      <li><a href="https://github.com/YajieWeng/CIM111/blob/master/HW/a2/index.html">Github Setup Assignment<a/><li/>
+      <li>><a href="https://github.com/YajieWeng/CIM111/blob/master/HW/a3/index.html">HTML/Resume Assignment<a/><li/>
+      <li>><a href="https://github.com/YajieWeng/CIM111/blob/master/HW/a4/index.html">HTML/CSS Assignment<a/><li/>
+      <li>><a href="https://github.com/YajieWeng/CIM111/blob/master/HW/a5/index.html">Responsive Site<a/><li/>
+      <li>><a href="https://github.com/YajieWeng/CIM111/blob/master/HW/a6/index.html">jQuery Assignment 1 - How to Website<a/><li/>
+      <li>><a href="https://github.com/YajieWeng/CIM111/blob/master/HW/a7/index.html">jQuery Assignment 2 - Plugins<a/><li/>
+      <li>><a href="https://github.com/YajieWeng/CIM111/blob/master/HW/a8/index.html">FINAL PROJECT <a/><li/>
   <ol/>
 </body>
 </html>
