--- a/HW/code folder/index.html
+++ b/HW/code folder/index.html
@@ -1,1 +1,35 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+    <meta name="keywords" content="learning to code html best class ever dont" />
+
+</head>
+
+
+<body>
+    <h1>My first site!</h1>
+    <p>What should i write in here. I don't know man. i am just trying to learn to code. alrighty then.</p>
+
+<hr>
+<a href="https://www.google.com" target="_blank">Click my cool link</a>
+<hr>
+<!-- unordered list -->
+<ul>
+    <li>firstly</li>
+    <li>secondly</li>
+    <li>who is hungry?</li>
+    <li>when does this class end!</li>
+
+</ul>
+
+    <!--ordered list -->
+    <ol>
+        <li>no questions</li>
+        <li>sdifsdofiu</li>
+    </ol>
+
+
+
+</body>
+</html>
